test/spec_vectors/ref/fail/module_2.wat
(module (type $type-func-result-invalid (func (result (ref 1)))))